--- a/styles.css
+++ b/styles.css
@@ -281,8 +281,8 @@ body {
 .game-image img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
-  object-position: center top;
+  object-fit: contain;
+  object-position: center;
   display: block;
 }
 
